package entite;

public class entite {
    private String m_nom;
    
}
