package jouable.personnage;

public class Personnage {
}
