package jouable.personnage.classe;

public class Guerrier {
}
