package jouable.personnage.race;
import stats.CaracteristiquesBase;
public interface Race {
    String toString();
    String getRace();
    CaracteristiquesBase ajouterCaracteristique(CaracteristiquesBase);

}
